--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto-Cine
+application.vendor=H\u00e9ctor
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1526571787480
@@ -30,6 +31,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Proyecto-Cine.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.Proyecto-Cine-src=src
 includes=**
