--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -5,9 +5,9 @@ annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 application.title=Proyecto-Cine
 application.vendor=H\u00e9ctor
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;output=bin;
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.key=src=src;file=lib/mysql-connector-java-5.1.41-bin.jar;output=bin;
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.project=.
-auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1526571787480
+auxiliary.org-netbeans-modules-projectimport-eclipse-core.timestamp=1526679160440
 auxiliary.org-netbeans-modules-projectimport-eclipse-core.workspace=..
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -33,10 +33,12 @@ dist.jar=${dist.dir}/Proyecto-Cine.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mysql-connector-java-5.1.41-bin.jar=lib/mysql-connector-java-5.1.41-bin.jar
 file.reference.Proyecto-Cine-src=src
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.mysql-connector-java-5.1.41-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
